add splash screen/implement mersey lib

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".NewsApp"
-        android:theme="@style/Theme.TemplateApp">
+        android:theme="@style/Theme.NewsApp">
 
-        <activity android:name="com.merseyside.news.main.view.MainActivity">
+        <activity
+            android:name="com.merseyside.splash.SplashActivity"
+            android:label="@string/app_name"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.merseyside.news.main.view.MainActivity"/>
 
     </application>
 </manifest>
